# elixr-user-service

./: .gitmodules  Cargo.toml  Dockerfile  build.rs
.github/workflows/: deploy.yml
src/: main.rs
src/api/: mod.rs  models.rs  users.rs
src/submodules/message-protos/: commands.proto  events.proto  models.proto
