[package]
name = "elixr-user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"
axum = { version = "0.7.4", features = ["multipart"] }
google-cloud-storage = "0.14.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
openssl = { version = "0.10.59", features = ["vendored"] }
base64 = "0.21"
firestore = "0.39.0"
chrono = "0.4.31"
google-cloud-pubsub = "0.22.0"
google-cloud-googleapis = "0.12.0"
futures = { version = "0.3.30", features = [] }
tokio-stream = "0.1.14"
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
prost-types = "0.12.3"
tonic = "0.10.2"
http-body-util = "0.1.1"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = { version = "0.11.6" }
prost-wkt-build = "0.5"